# snippets-ls

./: Cargo.toml  README.md  snippets.toml
src/: main.rs  snippets.rs
