[package]
name = "snippets-ls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0.1"
lazy_static = "1.4.0"
lsp-server = "0.7.2"
lsp-types = "0.94.0"
serde = { version = "1.0.177", features = ["derive"] }
serde_json = "1.0.104"
toml = "0.7.6"

[profile.release]
opt-level = "z"
lto = true
